# MCP-Fabric

./: .dockerignore  .gitignore  Dockerfile  MCP Fabric Setup.bat  README.md  authenticate.py  check_permissions.py  fabric_mcp.py  pyproject.toml  query_failed_job.py  test_dax_query.py  test_notebook_creation.py  test_orchestration.py  test_orchestration_basic.py  test_security.py
.claude/: settings.local.json
docs/: AGENTIC_ARCHITECTURE_PROPOSAL.md  AGENTIC_FEATURES_README.md  AGENTIC_LOGIC_ANALYSIS_SUMMARY.md  ARCHITECTURE_DIAGRAMS.md  COMPARISON_POWERBI_VS_FABRIC_MCP.md  FIX_GET_JOB_DETAILS.md  IMPLEMENTATION_COMPLETE.md  PLAN-dataset-report-querying.md  QUICK_START_AGENTIC_IMPLEMENTATION.md  architecture.md  pyspark_guide.md
helpers/: logging_config.py  pyspark_helpers.py
helpers/clients/: __init__.py  fabric_client.py  lakehouse_client.py  notebook_client.py  powerbi_client.py  report_client.py  semanticModel_client.py  spark_client.py  sql_client.py
helpers/orchestration/: __init__.py  agent_policy.py  lakehouse_orchestrator.py  notebook_orchestrator.py  tool_relationships.py  workflow_chains.py
helpers/policies/: __init__.py  execution_policy.py
helpers/utils/: __init__.py  authentication.py  context.py
tools/: __init__.py  deployment_pipeline.py  environment.py  job_scheduler.py  lakehouse.py  load_data.py  notebook.py  public_apis.py  report.py  semantic_model.py  sql_endpoint.py  table.py  warehouse.py  workspace.py
