[project]
name = "ms-fabric-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]",
    "azure-identity",
    "deltalake",
    "requests",
    "cachetools",
    "semantic-link-labs",
    "azure-storage-blob",
    "polars",
    "mssql-python",
    "tabulate",
    "fastapi[standard]",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-multipart",
    "fastapi-mcp",
]

[tool.setuptools]
packages = ["helpers", "helpers.clients", "helpers.formatters", "helpers.utils"]

[project.scripts]
mcp = "mcp.cli:app [cli]"
